# CryptoStreams

./: CMakeLists.txt  generator.cc  stream.h  streams.cc  streams.h
streams/block/: block_factory.cpp  block_factory.h
streams/block/ciphers/lightweight/: lightweight.h
streams/block/ciphers/lightweight/fantomas/: fantomas.cc
streams/block/ciphers/lightweight/lblock/: lblock.cc
streams/block/ciphers/lightweight/lea/: lea.cc
streams/block/ciphers/lightweight/led/: led.cc
streams/block/ciphers/lightweight/piccolo/: piccolo.cc
streams/block/ciphers/lightweight/pride/: pride.cc
streams/block/ciphers/lightweight/prince/: prince.cc
streams/block/ciphers/lightweight/rc5-20/: rc5_20.cc
streams/block/ciphers/rc4/: rc4.cpp
streams/estream/: estream_cipher.cc
streams/prngs/: CMakeLists.txt  prng_generator.cc  prng_generator.h  prng_stream.cc  prng_stream.h
streams/prngs/testu01-prngs/: CMakeLists.txt  testu01_generator.h  testu01_interface.h
streams/prngs/testu01-prngs/functions/ucarry/: ucarry_generator.h
streams/prngs/testu01-prngs/functions/ulcg/: ulcg.c  ulcg_generator.h
streams/prngs/testu01-prngs/functions/umrg/: umrg.c  umrg_generator.h
streams/prngs/testu01-prngs/functions/unif01/: dummy_generator.h
streams/sha3/: sha3_factory.cc
testsuite/: block_streams_tests.cc  stream_tests.cc  testu01_prng_tests.cc
testsuite/test_resources/block/RECTANGLE/: test_vectors_25.txt
testsuite/test_resources/block/SPARX/: test_vectors_8.txt
testsuite/test_utils/: block_test_case.cc  hash_test_case.cc  stream_ciphers_test_case.cc
(+9 files in other folders)
